[package]
name = "hash_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0"
digest = "0"
hex = "0"

blake2 = "0"
md5 = "0"
sha1 = "0"
sha3 = "0"
sha2 = "0"
sm3 = "0"

crc = "3"
crc16 = "0"
crc32fast = "1"
crc64 = "2"
sha256 = "1"
twox-hash = "2"
seahash = "4"
xxhash-rust = {version="0", features =["xxh32", "const_xxh32", "xxh64", "const_xxh64", "xxh3", "const_xxh3"]}
murmur3 = {git = "https://github.com/stusmall/murmur3", branch="master",version= "0.5.2"}
fastmurmur3 = "0"
